added the keyboardThemeClass to the keyboard, added the keyboardThemeClass to the css, and removed the preceeding / in the css link so that it links to the css.

--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,10 @@ body.handsfree-started .handsfree-show-when-stopped {
   display: none;
 }
 
+.keyboardThemeClass {
+  color: black !important;
+}
+
 /* Demo */
 .hidden {
   display: none;
