removed the important flag, since it's not important.

--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body.handsfree-started .handsfree-show-when-stopped {
 }
 
 .keyboardThemeClass {
-  color: black !important;
+  color: black;
 }
 
 /* Demo */
