Clutter removed, added settings tab for evaluation mode, input method, id

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ main {
   z-index: 1
 }
 
+.v-text-field{
+  margin:10px;
+}
+
 /* Handsfree */
 .handsfree-boids-debugger-wrap {
   position: fixed;
